Apply rule "Prefer java.util.Set.of(Object)"